# hiperc

./: .gitattributes  .gitignore  .markdown-link-check.json  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  README.rst  hiperc-diffusion-flowchart.dot  index.html  paper.bib  paper.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
_includes/: ntd2d_variants.html
_templates/: index.html
acc/: README.md
analysis-diffusion/: README.md  diffusion-scaling-experiment.sh  plot_runtimes.py
analysis-manufactured/: manufactured-solution-experiment.sh  mms-analysis.py  params.in  spatial-experiment.sh  temporal-experiment.sh
analysis-spinodal/: plot_runtimes.py
common-diffusion/: boundaries.h  discretization.h  main.c  mesh.c  mesh.h  numerics.c  numerics.h  output.c  output.h  params.txt  timer.c  timer.h  type.h
common-manufactured/: boundaries.h  mesh.c  mesh.h  numerics.c  numerics.h  output.c  output.h  params.txt  timer.h
common-spinodal/: boundaries.h  discretization.h  mesh.c  mesh.h  numerics.c  numerics.h  output.c  output.h  params.txt  type.h
cpu/: Makefile  (+15 more)
cpu-analytic-diffusion/: Makefile  README.md  analytic_main.c  discretization.c  discretization.h  main.c
cpu-hedgehog-diffusion/: CMakeLists.txt  README.md  main.cpp
cpu-hedgehog-diffusion/cmake-modules/: FindHedgehog.cmake
cpu-hedgehog-diffusion/data/: GridPtrData.cpp  GridPtrData.h
cpu-hedgehog-diffusion/tasks/: DiffOpTask.cpp  DiffOpTask.h
cpu-hedgehog-diffusion/utils/: mesh.cpp  output.cpp  output.h
cpu-htgs-diffusion/: README.md  main.cpp
(+565 files in other folders)
